argo_rollouts_canary/k8s/alb/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
    - name: test-container
      image: curlimages/curl:latest
      command: ["sleep", "3600"]
