argo_rollouts_canary/k8s/alb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-alb-canary-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-alb-demo
---
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-alb-stable-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-alb-demo
