argo_rollouts_canary/k8s/alb/httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: argo-rollouts-alb-http-route
spec:
  parentRefs:
    - kind: Gateway
      name: internal-http
  rules:
    - backendRefs:
        - name: argo-rollouts-alb-stable-service
          port: 80
        - name: argo-rollouts-alb-canary-service
          port: 80
